#
# This file is part of the "gameplay" project
# See "LICENSE" for license information.
#

#------------------------------------------------------------------------------

add_subdirectory(browser)
add_subdirectory(character)
add_subdirectory(racer)
add_subdirectory(spaceship)

#------------------------------------------------------------------------------
